--- a/37.BwInf/Runde2/Aufgabe2/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/MainWindow.xaml
+++ b/37.BwInf/Runde2/Aufgabe2/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/MainWindow.xaml
@@ -10,7 +10,6 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -18,20 +17,19 @@
         <GroupBox Header="Input" Grid.Row="0" Margin="5 0 5 5">
             <StackPanel Orientation="Vertical">
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
-                    <Label Content="n = "/>
-                    <TextBox Name="TextBoxInput" Width="30" Height="20"/>
-                    <Button Name="ButtonBerechnen" Content="Berechnen" Margin="7" Click="ButtonBerechnen_Click"/>
-                    <Label Content="Runtime [s]: " Margin="20 0 0 0"/>
-                    <Label Name="LabelElapsedTime"/>
+                    <StackPanel.Resources>
+                        <local:Solvers x:Key="mySolvers"/>
+                    </StackPanel.Resources>
+                    <Label Content="n = " Margin="10 5 0 5"/>
+                    <TextBox Name="TextBoxInput" Text="5" Width="30" Height="20" Margin="0 5 5 5"/>
+                    <ComboBox Name="ComboBoxSolvers" ItemsSource="{StaticResource mySolvers}" Text="Choose Solver" IsEditable="false" IsReadOnly="true" Margin="10 5 5 5" SelectedItem="StupidSolver"/>
+                    <Button Name="ButtonBerechnen" Content="Berechnen" Margin="10 5 5 5" Click="ButtonBerechnen_Click"/>
+                    <Label Content="Runtime [s]: " Margin="10 5 0 5"/>
+                    <Label Name="LabelElapsedTime" Margin="0 5 5 5"/>
                 </StackPanel>
             </StackPanel>
         </GroupBox>
         <Canvas Name="CanvasGrid" ClipToBounds="True" Grid.Row="1"/>
-        <StackPanel Orientation="Vertical" Grid.Row="2">
-            <StackPanel Orientation="Horizontal">
-                <Label Content="Runtime: "/>
-                <Label Name="LabelRuntime" Content=""/>
-            </StackPanel>
-        </StackPanel>
+
     </Grid>
 </Window>
