--- a/36.BwInf/Runde2/Aufgabe1/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/MainWindow.xaml
+++ b/36.BwInf/Runde2/Aufgabe1/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BwInf36Runde2Aufgabe1"
         mc:Ignorable="d"
-        Title="Bob der Baumeister entwirft Mauern" Height="450" Width="800">
+        Title="Bob der Baumeister entwirft Mauern" Height="450" Width="800" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
@@ -23,8 +23,10 @@
                     <Label Content="n = " Margin="10 5 0 5" VerticalAlignment="Center"/>
                     <TextBox Name="TextBoxInput" Text="6" Width="30" Height="20" Margin="0 5 5 5"/>
                     <ComboBox Name="ComboBoxSolvers" ItemsSource="{StaticResource mySolvers}" Text="Choose Solver" IsEditable="false" IsReadOnly="true" Margin="10 5 5 5" SelectedItem="StupidSolver"/>
-                    <Button Name="ButtonBerechnen" Content="Berechnen" Margin="10 5 5 5" Padding="5 0 5 0" Click="ButtonBerechnen_Click"/>
-                    <Label Content="Runtime [s]: " Margin="10 5 0 5"/>
+                    <Button Name="ButtonCalculate" Content="Calculate" Margin="10 5 5 5" Padding="5 0 5 0" Click="ButtonCalculate_Click"/>
+                    <Button Name="ButtonStop" Content="Stop" Margin="10 5 5 5" Padding="5 0 5 0" Click="ButtonStop_Click" Visibility="Collapsed"/>
+                    <CheckBox Name="CheckBoxContinue" Content="Continue with next n" VerticalAlignment="Center"/>
+                    <Label Content="Runtime [s]: " Margin="10  0" VerticalAlignment="Center"/>
                     <Label Name="LabelElapsedTime" Margin="0 5 5 5"/>
                 </StackPanel>
             </StackPanel>
