--- a/36.BwInf/Runde2/Aufgabe1/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/MainWindow.xaml
+++ b/36.BwInf/Runde2/Aufgabe1/BwInf37Runde2Aufgabe2/BwInf37Runde2Aufgabe2/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BwInf36Runde2Aufgabe1"
         mc:Ignorable="d"
-        Title="Bob der Baumeister entwirft Mauern" Height="450" Width="800" ResizeMode="NoResize">
+        Title="Bob der Baumeister entwirft Mauern" Height="450" Width="800" ResizeMode="NoResize"  WindowState="Maximized"  >
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60"/>
